# fornax

./: .gitignore  Cargo.toml  build.mjs  openapi.json  wrangler.toml
migrations/: 0001_init_schema.sql
src/: api.rs  auth.rs  lib.rs  openapi.rs  router.rs  state.rs
src-vite/: components.json  orval.config.ts  package.json  pnpm-lock.yaml
src-vite/src/: RootPage.tsx  index.css  main.tsx
src-vite/src/api/: axios.ts  generated.ts  index.ts
src-vite/src/api/model/: apiRespLoginResp.ts  apiRespLoginRespData.ts  apiRespLoginRespErrors.ts  apiRespSendCodeResp.ts  apiRespSendCodeRespData.ts  apiRespSendCodeRespErrors.ts  index.ts  loginReq.ts  loginResp.ts  sendCodeReq.ts  sendCodeResp.ts
src-vite/src/components/ui/: button.tsx  input-otp.tsx
src-vite/src/features/auth/: AuthPage.tsx  auth-form.tsx
src-vite/src/features/login/: LoginForm.tsx  LoginPage.tsx
src-vite/src/router/: AuthRouter.tsx  router.tsx
src-vite/src/store/: auth.store.ts
src/auth/: dto.rs  entity.rs  error.rs  handler.rs  key.rs  map.rs  message.rs  mod.rs  model.rs  repository.rs  router.rs  service.rs
src/common/: binding.rs  config.rs  i18n.rs  jwt.rs  mod.rs  secret.rs  util.rs  var.rs
