[package]
name = "fornax"
version = "0.1.0"
edition = "2021"
authors = ["Evorsio"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum','d1'] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "macros"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4"] }
rand = "0.10.2"
