[package]
name = "fornax"
version = "0.1.0"
edition = "2021"
authors = ["Evorsio"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum','d1'] }
#worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false ,features = ["json"]}
tower-service = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
#serde_json = "1.0.150"
#chrono = { version = "0.4.45", features = ["serde"] }
#uuid = { version = "1.23.4", features = ["v4","js"] }
#argon2 = "0.5.3"
#jsonwebtoken = "10.4.0"
rand = "0.10.2"
#rand = "0.10.2"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
