[package]
name = "fornax"
version = "0.1.0"
edition = "2021"
authors = ["Evorsio"]

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum','d1'] }
#worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false ,features = ["json"]}
tower-service = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4","js"] }
#argon2 = "0.5.3"
jsonwebtoken = {
    version = "10.4.0",
    default-features = false,
    features = ["rust_crypto"]
}
rand = "0.10.2"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
#utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum","vendored"] }
#rand = "0.10.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_v02 = {
    package = "getrandom",
    version = "0.2.17",
    features = ["js"]
}

getrandom_v04 = {
    package = "getrandom",
    version = "0.4.3",
    features = ["wasm_js"]
}
